--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ footer a {
   background: url(./asset/thank.jpg) center/cover;
 }
 .mer {
-  display: flex;
+  display: block;
   height: 100%;
   width:100%;
 }
