--- a/style.css
+++ b/style.css
@@ -142,11 +142,29 @@ header h2 {
   margin-top: 300px;
   text-shadow: 0px 0px 2px gray;
 }
+.mer {
+  width:100%
+  height: 100%;
+  font-size: calc(3rem + 6vw);
+}
 .about {
   margin: 0px 0 250px;
 }
 .img1 {
   background: url(./asset/Portrait.jpg) center/cover;
+}
+.list {
+  font-family: "font-bold", serif;
+  text-align: center;
+  font-size: 2rem;
+}
+.social-media {
+  height: 90px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  margin: 150px auto;
+  gap: 5rem;
 }
 .skills {
   margin: 200px 0 250px;
@@ -220,22 +238,4 @@ footer a {
 }
 .img2 {
   background: url(./asset/thank.jpg) center/cover;
-}
-.mer {
-  width:100%
-  height: 100%;
-  font-size: calc(3rem + 6vw);
-}
-.liste {
-  font-family: "font-bold", serif;
-  text-align: center;
-  font-size: 2rem;
-}
-.social-media {
-  height: 90px;
-  width: auto;
-  display: flex;
-  justify-content: center;
-  margin: 150px auto;
-  gap: 5rem;
 }
