--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a:hover::after {
 }
 .mer {
   width:100%
-  height: 50%;
+  height: 590px;
 }
 .img {
   height: 395px;
@@ -129,16 +129,13 @@ h3 {
   background-clip: text, padding-box;
   transition: 0.5s;
   text-align: center;
+  font-family: "font-bold", serif;
+  margin-top: 20px;
+  font-size: 3rem;
+  cursor: pointer;
 }
 h3:hover {
   --_p: 100%;
-}
-
-h3 {
-  font-family: "font-bold", serif;
-  margin-top: 20px;
-  font-size: 4rem;
-  cursor: pointer;
 }
 header h2 {
   font-size: calc(1rem + 5vw);
