--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ a:hover::after {
     transform: scaleX(1);
   }
 }
-.mer {
+.nature {
   width:100%
   height: 590px;
 }
@@ -106,7 +106,6 @@ a:hover::after {
   transform-origin: left;
   transition-delay: 0.65s;
 }
-/* parametres par ordre d'apparition */
 header {
   height: 20vh;
   position: relative;
@@ -115,26 +114,6 @@ header {
 .links {
   display: flex;
   justify-content: space-between;
-}
-h3 {
-  --s: 0.1em; /* the thickness of the line */
-  --c: #000101;
-  color: #000101;
-  padding-bottom: var(--s);
-  background: linear-gradient(90deg, var(--c) 50%, #fefeff)
-      calc(100% - var(--_p, 0%)) / 200% 100%,
-    linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) var(--s) no-repeat;
-  -webkit-background-clip: text, padding-box;
-  background-clip: text, padding-box;
-  transition: 0.5s;
-  text-align: center;
-  font-family: "font-bold", serif;
-  margin-top: 20px;
-  font-size: 3rem;
-  cursor: pointer;
-}
-h3:hover {
-  --_p: 100%;
 }
 header h2 {
   font-size: calc(1rem + 5vw);
@@ -181,6 +160,26 @@ header h2 {
   color: #fefeff;
   display: inline-block;
   padding: 0 12px 12px;
+}
+h3 {
+  --s: 0.1em; /* the thickness of the line */
+  --c: #000101;
+  color: #000101;
+  padding-bottom: var(--s);
+  background: linear-gradient(90deg, var(--c) 50%, #fefeff)
+      calc(100% - var(--_p, 0%)) / 200% 100%,
+    linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) var(--s) no-repeat;
+  -webkit-background-clip: text, padding-box;
+  background-clip: text, padding-box;
+  transition: 0.5s;
+  text-align: center;
+  font-family: "font-bold", serif;
+  margin-top: 20px;
+  font-size: 3rem;
+  cursor: pointer;
+}
+h3:hover {
+  --_p: 100%;
 }
 .portfolio {
   margin: 200px 0;
